--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,184 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav {
+  position: fixed;
+}
+
+.navbar .nav-link:hover {
+  color: #f2195d;
+}
+
+.jumbotron {
+  background-image: url(./assets/img16.jpg);
+  background-position: top 30% left 0%;
+}
+
+.jumbotron h1 {
+  margin-top: 10rem;
+  color: #fff;
+}
+
+.left-div {
+  width: 60%;
+  padding: 30px;
+}
+
+.right-div {
+  width: 40%;
+  padding: 30px;
+}
+
+.login-form {
+  background-color: #fff;
+  padding: 40px;
+  text-align: center;
+}
+
+.login-form input {
+  padding: 10px;
+  margin: 10px;
+  background-color: #eee;
+}
+
+.login-form button {
+  background-color: #f2195d !important;
+  width: 100%;
+  margin: 10px;
+}
+
+.image-container {
+  border: 1px solid #ccc;
+  overflow: hidden;
+  margin: 2px;
+}
+
+.image-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.image-box img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.image-box:hover img {
+  transform: rotate(5deg) scale(1.2);
+}
+
+.content-box {
+  width: 22%;
+}
+
+.image-subcontent {
+  border-bottom: 1px solid #ccc;
+}
+
+h1 span,
+i {
+  color: #f2195d;
+}
+
+.templete-subdiv {
+  width: 75%;
+}
+
+.slider-div {
+  background-image: url(./assets/img12.jpg);
+  background-position: top 14% left 40%;
+  padding: 80px;
+}
+
+.subslider {
+  width: 100%;
+}
+
+.subsp {
+  color: #f2195d;
+}
+
+.carousel-item img {
+  border-radius: 50%;
+}
+
+.price-card {
+  background-color: #fff;
+  padding: 70px;
+  margin: 10px;
+}
+
+.price-card button {
+  background-color: #f2195d;
+}
+
+.price-card h1 {
+  font-size: 55px;
+  font-weight: bold;
+}
+
+.trail-div {
+  background-image: url(./assets/img11.jpg);
+  background-position: top 30% left 0%;
+  padding: 60px;
+}
+
+.trail-div h1 {
+  color: #f2195d;
+}
+
+.trail-div button {
+  background-color: #f2195d;
+  color: #fff;
+}
+
+.icon-circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #25272a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+.logos {
+  display: inline-block;
+  white-space: nowrap;
+  animation: scrollLeft 40s linear infinite;
+}
+
+.logos img {
+  margin-right: 50px;
+}
+
+.navbar ul li a.active-red {
+  color: red;
+}
+
+.horizontal-line {
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-100% - 10px));
+  }
+}
